feat: Adicionando as exceptions personalizadas